--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ngrx/store": "^8.6.0",
+    "bcrypt": "^3.0.8",
+    "body-parser": "^1.19.0",
     "bootstrap": "^3.4.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
